--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name":"scrawl",
-  "version":"1.0.3",
+  "version":"1.0.4",
+   "engines": {
+        "ghost": ">=2.0.0"
+    },
   "author": {
-    "name": "Kate Preston",
+    "name": "kate-preston",
     "email": "ktweeden@gmail.com",
     "url": "https://github.com/ktweeden/scrawl"
 },
   "contributors": [],
   "repository":{
     "type": "git",
-    "url": "https://github.com/ktweeden/scrawl"
+    "url": "https://github.com/pubmania/scrawl"
   },
   "keywords":[
     "blog",
     "ghost",
-    "theme"
+    "theme",
+    "ghost-theme"
   ],
   "scripts":{
     "watch-css":"sass --watch sass:assets/css",
